exercises/Site-to-Site-VPN Exercise/sg.tf
resource "aws_security_group" "SG1" {
  vpc_id      = aws_vpc.VPC1.id
  description = "VPC1-IDC-CGW-SG"

  tags = {
    Name = "VPC1-IDC-CGW-SG"
  }

  ingress {
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 4500
    to_port     = 4500
    protocol    = "udp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "all"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "SG2" {
  vpc_id      = aws_vpc.VPC1.id
  description = "VPC1-IDC-EC2-SG"

  tags = {
    Name = "VPC1-IDC-EC2-SG"
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "SG3" {
  vpc_id      = aws_vpc.VPC2.id
  description = "VPC2-AWS-EC2-SG"

  tags = {
    Name = "VPC2-AWS-EC2-SG"
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
